--- a/projects/line_laundry/tube/drogue.yaml
+++ b/projects/line_laundry/tube/drogue.yaml
@@ -1,14 +1,38 @@
-name: Drogue
-complexity: 2
+name: Tube
+complexity: 1
 base_length: 1000
 geometry:
-  type: cone
+  type: cylinder
 parameters:
-  diameter: 600
-  length: 1000
-  num_gores: 8
-description: Converted project
+  diameter: 50
+  length: 10000
+  color: single
+  material: ripstop
+  weight: 30g/m²
+  seam_allowance: 10
+  attachment_points:
+    - position: 25%
+      type: carabiner
+    - position: 75%
+      type: carabiner
+  reinforcements:
+    - position: 25%
+      type: double_layer
+    - position: 75%
+      type: double_layer
+description: A simple tube tail for kites
 author: Unknown
 version: 1.0
-_conversion_warnings:
-- No parameters found; using default
+references:
+  - url: "https://www.kiteplans.org/planos/drogue2/drogue2.html"
+    title: "Tube Tail Design"
+    description: "Basic tube tail construction"
+  - url: "https://www.drachenbernhard.de/akt_work_kleiner_papagei.html"
+    title: "Kite Decoration Techniques"
+    description: "Advanced attachment methods"
+search_terms:
+  - "kite tube tail"
+  - "line laundry tube"
+  - "kite decoration tube"
+  - "kite tail sewing"
+
