--- a/projects/line_laundry/spinners/helix_spinner.yaml
+++ b/projects/line_laundry/spinners/helix_spinner.yaml
@@ -1,19 +1,16 @@
 name: "Helix Spinner"
-material: "ripstop_nylon"
-colors: ["DPIC040", "DPIC031", "DPIC046"]  # Red, White, Royal Blue
-geometry:
-  type: "pipe"
-parameters:
-  diameter: 300  # mm
-  length: 1200  # mm
-  seam_allowance: 10  # mm
-  segments: 12
+materials:
+  - "tyvek"
+  - "rope"
+  - "carbon_rods"
+colors: ["red", "blue"]
+dimensions:
+  width: 30
+  height: 30
+  segments: 8
 attachment:
   type: "ring"
-  bridle_length: 20  # cm
-description: "A long, cylindrical spinner with alternating red, white, and blue segments for a vibrant spiral effect in high winds."
-author: "Kite Enthusiast"
-version: "1.0"
-wind_conditions:
-  min_speed: 10  # mph
-  max_speed: 20
+  bridle_length: 15
+article_notes:
+  - "Ensure even segment spacing for balanced spinning."
+  - "Use carbon rods for a lightweight, stiff frame."
