Fix TemplateNotFound, ensure designs.html, debug template path
- Ensured designs.html with proper HTML structure.
- Added template_folder='Core/web/templates' and debug logging in app.py.
- Updated helix_spinner.yaml with cone parameters.
- Committed uncommitted changes (__init__.py, article_generator.py).
- Fixed PR base branch to 'main'.
- Added template path verification.

--- a/projects/line_laundry/spinners/helix_spinner.yaml
+++ b/projects/line_laundry/spinners/helix_spinner.yaml
@@ -1,13 +1,15 @@
 name: "Helix Spinner"
+shape: "cone"
 materials:
   - "tyvek"
   - "rope"
   - "carbon_rods"
 colors: ["red", "blue"]
-dimensions:
-  width: 30
-  height: 30
-  segments: 8
+diameter: 300
+length: 1000
+num_gores: 8
+seam_allowance: 10
+tip_diameter: 0
 attachment:
   type: "ring"
   bridle_length: 15
