--- a/projects/line_laundry/tube/tube.yaml
+++ b/projects/line_laundry/tube/tube.yaml
@@ -1,37 +1,14 @@
-name: Tube
-complexity: 1
-base_length: 1000
-geometry:
-  type: pipe
-parameters:
-  diameter: 50
-  length: 10000
-  color: single
-  material: ripstop
-  weight: 30g/m²
-  seam_allowance: 10
-  attachment_points:
-    - position: 25%
-      type: carabiner
-    - position: 75%
-      type: carabiner
-  reinforcements:
-    - position: 25%
-      type: double_layer
-    - position: 75%
-      type: double_layer
-description: A simple tube tail for kites
-author: Unknown
-version: 1.0
-references:
-  - url: "https://www.kiteplans.org/planos/tubetail/tubetail.html"
-    title: "Tube Tail Design"
-    description: "Basic tube tail construction"
-  - url: "https://www.drachenbernhard.de/akt_work_kleiner_papagei.html"
-    title: "Kite Decoration Techniques"
-    description: "Advanced attachment methods"
-search_terms:
-  - "kite tube tail"
-  - "line laundry tube"
-  - "kite decoration tube"
-  - "kite tail sewing"
+name: "Tube"
+shape: "cone"
+materials:
+  - "tyvek"
+  - "rope"
+colors: ["blue", "white"]
+diameter: 400
+length: 1200
+num_gores: 6
+seam_allowance: 10
+tip_diameter: 0
+article_notes:
+  - "Ensure smooth curves for aerodynamic shape."
+  - "Use lightweight rope for bridle."
