--- a/Core/configurations/resources/external_colors.yaml
+++ b/Core/configurations/resources/external_colors.yaml
@@ -1,17 +1,8 @@
 external_colors:
-  red:
-    hex: "#FF0000"
-    supplier: "https://ripstopbytheroll.com/collections/ripstop-nylon"
-  blue:
-    hex: "#0000FF"
-    supplier: "https://kiteplans.org/colors/blue.html"
-  green:
-    hex: "#00FF00"
-    supplier: "https://drachenbernhard.de/colors/green.html"
+  red: {hex: "#FF0000", supplier: "https://ripstopbytheroll.com/collections/ripstop-nylon"}
+  blue: {hex: "#0000FF", supplier: "https://kiteplans.org/colors/blue.html"}
+  green: {hex: "#00FF00", supplier: "https://drachenbernhard.de/colors/green.html"}
+  gold: {hex: "#FFD700", supplier: "https://ripstopbytheroll.com/products/gold-nylon"}
 ripstop_samples:
-  standard:
-    weight: 40
-    supplier: "https://ripstopbytheroll.com/products/1-5-oz-ripstop-nylon"
-  heavy:
-    weight: 60
-    supplier: "https://kiteplans.org/ripstop/heavy"
+  standard: {weight: 40, supplier: "https://ripstopbytheroll.com/products/1-5-oz-ripstop-nylon"}
+  heavy: {weight: 60, supplier: "https://kiteplans.org/ripstop/heavy"}
